--- a/index.html
+++ b/index.html
@@ -5,9 +5,206 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-School</title>
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header class="header-area">
+        <div class="container">
+            <!---------NAVVAR--------->
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand nav-img" href="#"><img src="image/ICON/Logo.png" alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active mr-3">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item mr-3">
+                            <a class="nav-link text-dark" href="#course">Courses</a>
+                        </li>
+                        <li class="nav-item mr-3">
+                            <a class="nav-link text-dark" href="#other">Others</a>
+                        </li>
+                        <li class="nav-item mr-3">
+                            <a class="nav-link text-dark" href="#blog">Blog</a>
+                        </li>
+                        <li class="nav-item mr-3 nav-btn">
+                            <a class="nav-link text-white" href="#">Sing in</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav> 
+            
+            <div class="learn-area mt-5 mx-3">
+                <div class="row">
+                    <div class="col-md-6 col-12 pt-4">
+                        <p class="text-danger">Are you ready to Learn?</p>
+                        <h1 class="font-weight-bold">Learn With fun <br> on <span class="markC">any schedule</span></h1>
+                        <p class="py-3">Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Varius blandit facilisis quam netus.</p>
+                        <button class="btn-learn text-white">Get Started</button>
+                    </div>
+                    <div class="col-md-6 col-12 pt-2 pb-5">
+                        <img class="img-fluid" src="image/Photos/Illustration.png" alt="photo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="box-area">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-3 col-sm-6 col-12 text-center">
+                    <div class="boxB">
+                        <img style="width: 39%;" src="image/ICON/book.png" alt="bookIcon">
+                        <h1 class="font-weight-bold pt-4">1500+ Topic</h1>
+                        <p>Learn Anythings</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-12 text-center">
+                    <div class="boxMark">
+                        <img src="image/ICON/Student.png" alt="StudentIcon">
+                        <h1 class="font-weight-bold pt-4">1800+ Students</h1>
+                        <p>Learn Anythings</p>
+                    </div> 
+                </div>
+                <div class="col-md-3 col-sm-6 col-12 text-center">
+                    <div class="boxB">
+                         <img src="image/ICON/Test.png" alt="textIcon">
+                        <h1 class="font-weight-bold pt-4">9K+ Test Token</h1>
+                        <p>Learn Anythings</p>
+                    </div>                 
+                </div>
+                <div class="col-md-3 col-sm-6 col-12 text-center">
+                    <div class="boxB">
+                        <img src="image/ICON/Students.png" alt="studentsIcon">
+                        <h1 class="font-weight-bold pt-4">2000+ Student</h1>
+                        <p>Learn Anythings</p>
+                    </div>                  
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="course-area my-5">
+        <div class="container">
+            <h1 class="text-center font-weight-bold py-5">Online Courses</h1>
+            <div class="card-deck">
+                <div class="card col-md-4 col-12">
+                    <img class="card-img-top" src="image/Photos/Morder pyschology.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Modern Psychology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="btn-course mt-2">Buy Now</button>
+                    </div>
+                    <div class="cardF d-flex justify-content-between">
+                        <img src="image/ICON/calendar.png" alt="">
+                        <h6 class="pt-2 ">Start 20 April, 2021</h6>
+                        <img src="image/ICON/people.png" alt="">
+                        <h6 class="pt-2">60 seats</h6>
+                    </div>
+                </div>
+                <div class="card col-md-4 col-12">
+                    <img class="card-img-top" src="image/Photos/Morder psyc.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Modern Psychology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="btn-course mt-2">Buy Now</button>
+                    </div>
+                    <div class="cardF d-flex justify-content-between">
+                        <img src="image/ICON/calendar.png" alt="">
+                        <h6 class="pt-2 ">Start 20 April, 2021</h6>
+                        <img src="image/ICON/people.png" alt="">
+                        <h6 class="pt-2">60 seats</h6>
+                    </div>
+                </div>
+                <div class="card col-md-4 col-12">
+                    <img class="card-img-top" src="image/Photos/Morder pychons.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Modern Psychology</h5>
+                        <p class="card-text">Designation</p>
+                        <button class="btn-course mt-2">Buy Now</button>
+                    </div>
+                    <div class="cardF d-flex justify-content-between">
+                        <img src="image/ICON/calendar.png" alt="">
+                        <h6 class="pt-2">Start 20 April, 2021</h6>
+                        <img src="image/ICON/people.png" alt="">
+                        <h6 class="pt-2">60 seats</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+   
+    <section class="testimonial-area">
+        <div class="container">
+            <h1 class="text-center font-weight-bold pt-5 pb-3">Testimonial</h1>
+            <div class="row">
+                <div class="col-md-4 imgT d-flex justify-content-center">
+                    <img src="image/Photos/Man.png" alt="man">
+                </div>
+                <div class="col-md-8 d-flex align-items-center">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour,   
+                    or randomised words which don't look even slightly believable.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-area d-flex align-items-center pt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>Millions of people of all ages and from around the world are<br> improving their lives with us</p>
+                </div>
+                <div class="col-md-2">
+                    <h3>Course</h3>
+                    <ul class="list-group">
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h3>Terms</h3>
+                    <ul class="list-group">
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+                <div class="col-md-2">
+                    <h3>Useful Link</h3>
+                    <ul class="list-group">
+                        <li>Graphic Design</li>
+                        <li>Web Design</li>
+                        <li>Business</li>
+                        <li>Marketing</li>
+                        <li>Engineering</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyR">
+                <p class="text-center ">Copyright © 2020 Rokomari.com</p>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
